# eth-supervised-research

./: .gitignore  README.md  pyproject.toml
data/gender/: generate.json  test.json
data/gender/deltas/: 10_activations.pt  11_activations.pt  7_activations.pt  8_activations.pt  9_activations.pt
data/gender/gpt/: source.json
data/gender/original/: generate.json  test.json
data/gender/probs/: test.csv
data/gender/sae_visualisation/: feature_centric_vis_neg.html  feature_centric_vis_neg_0.html  feature_centric_vis_neg_1.html  feature_centric_vis_neg_10.html  feature_centric_vis_neg_11.html  (+21 more)
data/hallucination/: generate.json  test.json
data/hallucination_combined/: generate.json  test.json
data/hallucination_random/: generate.json  test.json
data/random/: test.json
data/random_hallucination/: generate.json  test.json
data/refusal/: generate.json  test.json
data/refusal_combined/: generate.json  test.json
data/refusal_rimsky/: generate.json  test.json
data/survival/: generate.json  test.json
data/sycophancy/: test.json
data/weddings/: generate.json  test.json
data/weddings_simple/: generate.json  test.json
notes/: log.md
notes/proposal/: generate_pdf.sh  proposal.md  proposal_refs.bib
src/: Filtered_Feature_SV.py  _vec-layer-8_dataset-gender_masculine-0.999.html  main.py  notebook_features.py  notebook_plots.py  notebook_training.py  script_dataset.py  script_features.py  script_probs.py  script_vector.py
src/sae_analysis/: analysis_utils.py
src/sv/: datasets.py  loss.py  plots.py  scoring.py  train.py  utils.py  vectors.py
(+276 files in other folders)
