[tool.poetry]
name = "eth-supervised-research"
version = "0.1.0"
description = ""
authors = ["eugleo <wybitul.evzen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nnsight = "^0.2.12"
rich = "^13.7.1"
einops = "^0.7.0"
ipykernel = "^6.29.4"
transformers = "^4.40.0"
plotly = "^5.21.0"
pandas = "^2.2.2"
nbformat = "^5.10.4"
tqdm = "^4.66.2"
polars = "^0.20.22"
pyarrow = "^16.0.0"
typer = "^0.12.3"
kaleido = "0.2.1"
jsonpickle = "^3.0.4"
torch = "2.2.2"

packages = [
    { include = "src" },
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
