[project]
name = "eth-supervised-research"
version = "0.1.0"
dependencies = [
    "datasets",
    "einops",
    "ipykernel",
    "ipywidgets",
    "kaleido",
    "nbformat",
    "nnsight",
    "pandas",
    "plotly",
    "polars",
    "pyarrow",
    "rich",
    "sae-lens",
    "umap-learn",
    "torch==2.2.2",
    "transformers",
    "typer",
]

[project.scripts]
sv = "main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["F821", "F722"]
